--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
   "dependencies": {
     "@babel/preset-typescript": "^7.9.0",
     "@types/react": "^16.9.35",
-    "@types/react-relay": "^7.0.8",
-    "@types/relay-runtime": "^10.0.3",
-    "babel-plugin-relay": "^10.0.1",
+    "@types/react-relay": "^11.0.0",
+    "@types/relay-runtime": "^10.1.10",
+    "babel-plugin-relay": "^11.0.0",
     "gulp-if": "^3.0.0",
     "lazypipe": "^1.0.2",
     "react": "^16.13.1",
-    "react-relay": "^0.0.0-experimental-183bdd28",
-    "relay-compiler": "^10.0.1",
-    "relay-compiler-language-typescript": "^13.0.1",
-    "relay-runtime": "^10.0.1",
+    "react-relay": "^11.0.0",
+    "relay-compiler": "^11.0.0",
+    "relay-compiler-language-typescript": "^13.0.6",
+    "relay-runtime": "^11.0.0",
     "subscriptions-transport-ws": "^0.9.17",
     "through2": "^3.0.1"
   },
