--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,27 +1,7 @@
 {
   "extends": [
-    "react-app",
-    "plugin:jsx-a11y/recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking"
+    "@umk-stat/eslint-config-client"
   ],
-  "plugins": [
-    "jsx-a11y"
-  ],
-  "rules": {
-    "react/jsx-props-no-spreading": 0,
-    "linebreak-style": 0,
-    "react/prop-types": 0,
-    "react/jsx-boolean-value": 0,
-    "no-continue": 0,
-    "no-underscore-dangle": 0,
-    "react-hooks/exhaustive-deps": 0,
-    "no-else-return": 0,
-    "@typescript-eslint/no-unsafe-member-access": 0,
-    "@typescript-eslint/no-unsafe-assignment": 0,
-    "@typescript-eslint/no-unsafe-return": 0
-  },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.json"
